--- a/builds/index.html
+++ b/builds/index.html
@@ -87,6 +87,29 @@
 		
 
 
+		<div class="slick-carousel  carousel--overlay">
+		    <div class="slick-item">
+				<div class="moving-picture">
+					<div class="moving-picture__media">
+						<video autoplay="true" id="home-video" loop="true" muted="true">
+							<source src="https://www.bethel.edu/_testing/jmo/banner-collection/Homepage_-_Feature.webm" type="video/webm">
+							Your browser does not support the video tag.
+						</video>
+					</div>
+					<div class="va-container">
+						<div class="va-bottom">
+							<div class="moving-picture__overlay">
+						        <h2 class="moving-picture__overlay__headline">Heading</h2>
+						        <p class="moving-picture__overlay__teaser">Teaser</p>
+						        <p><a class="moving-picture__overlay__button btn" href="../../../undergrad/index.php"> Button Text </a></p>
+						    </div>
+					    </div>
+				    </div>
+				</div>
+			</div>
+		
+		
+		</div>
 
 		<p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
 
@@ -129,7 +152,80 @@
 
 <div class="main js-animate">
 
-
+    <h2 class="uppercase-underlined">Highlights</h2>
+    <div class="grid proof-points">
+        <div class="grid-cell animate animate--fadeIn">
+            <div class="grid-pad-1x">
+                <div class="proof-point center">
+                    <p class="proof-point__text"><span class="proof-point__number"><span class="odometer" data-final-number="94">00</span>%</span>
+                        <br/><span class="proof-point__text_below">seniors who rank their Bethel education good or excellent</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="grid-cell animate animate--fadeIn">
+            <div class="grid-pad-1x">
+                <div class="proof-point center">
+                    <p class="proof-point__text"><span class="proof-point__number"><span class="odometer" data-final-number="93">00</span>%</span>
+                        <br/><span class="proof-point__text_below">of recent grads are either employed or in graduate school</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="grid-cell animate animate--fadeIn">
+            <div class="grid-pad-1x">
+                <div class="proof-point center">
+                    <p class="proof-point__text"><span class="proof-point__number"><span class="odometer" data-final-number="5">0</span>th</span>
+                        <br/><span class="proof-point__text_below">lowest tuition out of the 17 schools in the Minnesota Private College Council</span> </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <table border="0" class="responsive">
+    <tbody>
+    <tr>
+    <th scope="col">
+    </th><th scope="col">Direct Unsubsidized Loans</th>
+    <th scope="col">Direct PLUS Loans</th>
+    <th scope="col">Private Loans</th>
+    </tr>
+    <tr>
+    <th scope="rowgroup">Fees</th>
+    <td>
+    <p>1.051% (after 7/1/2013)</p>
+    </td>
+    <td>
+    <p>4.204% (after 7/1/2013)</p>
+    </td>
+    <td>Varies</td>
+    </tr>
+    <tr>
+    <th scope="rowgroup">Make payments while in school?</th>
+    <td>Interest accrues. Optional in-school payment.</td>
+    <td>Yes</td>
+    <td>Yes</td>
+    </tr>
+    <tr>
+    <th scope="rowgroup">Interest rate</th>
+    <td>5.41% fixed (first disbursed 7/1/2013 - 6/30/2014)</td>
+    <td>6.41% fixed (first disbursed 7/1/2013 - 6/30/2014)</td>
+    <td>Varies</td>
+    </tr>
+    <tr>
+    <th scope="rowgroup">Repayment</th>
+    <td>10 years</td>
+    <td>10 years</td>
+    <td>Varies (10+<br>
+     years)</td>
+    </tr>
+    <tr>
+    <th scope="rowgroup">More info</th>
+    <td><a href="http://www.bethel.edu/seminary/financial-aid/types/loans/index#unsub">Unsubsidized Loans</a></td>
+    <td><a href="http://www.bethel.edu/seminary/financial-aid/types/loans/index#grad-plus">PLUS Loans</a></td>
+    <td><a href="http://www.bethel.edu/seminary/financial-aid/types/loans/index#private">Private Loans</a></td>
+    </tr>
+    </tbody>
+    </table>
     <div class="grid">
         <div class="grid-cell u-medium-1-2">
             <div class="medium-grid-pad-1x"><div class="news">
@@ -288,34 +384,30 @@
     <p>Additionally, the Twin Cities' arts community provides opportunities to experience culture firsthand or engage professionally with the arts through internships.</p>
 </div>
 
-		    </div><!--/#inner-wrap-->
+		    </div>
 		</div>
 
 		<footer class="global__footer">
 		    <div class="inner">
 		
-		        <div class="grid">
-		        <div class="grid-cell u-medium-2-4">
-		            <div class="grid-pad-1x">
-		                <div class="grid">
-		                    <div class="grid-cell  u-small-1-3  u-medium-1-3  pr1">
-		                        <img src="//cdn4.bethel.edu/images/seal2.png"/>
-		                    </div>
-		                    <div class="grid-cell  u-small-2-3  u-medium-2-3">
-		                        <h1 class="h5">Bethel University</h1>
-		                        <address>3900 Bethel Drive
-		                            <br/>St. Paul, MN 55112</address>
-		                        <p>651.638.6400</p>
-		                    </div>
-		                </div>
+		        <div class="center"><button class="btn btn-small"><span class="arrow-up"></span>Back to Top<span class="arrow-up"></span></button></div>
 		
-		                        <p><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#location"></use></svg><a href="http://www.bethel.edu/about/maps-directions/">Maps &amp; Directions</a></p>
-		                        <p><a class="btn btn-blue-dark" href="http://www.bethel.edu/giving/">Support Bethel</a></p>
-		                    
+		        <div class="grid mt2">
+		        <div class="grid-cell u-medium-1-3">
+		            <div class="grid-pad-1x">
+		                <img src="//cdn4.bethel.edu/images/seal2.png"/>
+		                <h1 class="h5">Bethel University</h1>
+		                <address>3900 Bethel Drive
+		                    <br/>St. Paul, MN 55112</address>
+		                <p>651.638.6400</p>
+		
+		                <p><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#location"></use></svg><a href="http://www.bethel.edu/about/maps-directions/">Maps &amp; Directions</a></p>
+		                <p><a class="btn btn-blue-dark" href="http://www.bethel.edu/giving/">Support Bethel</a></p>
+		            
 		                </div>
 		            </div>
 		
-		            <div class="grid-cell u-medium-1-4">
+		            <div class="grid-cell u-medium-1-3">
 		                <div class="grid-pad-1x">
 		                    <h2 class="h5">Information For</h2>
 		                    <ul class="">
@@ -328,7 +420,7 @@
 		                    </ul> 
 		               </div>
 		            </div>
-		            <div class="grid-cell u-medium-1-4">
+		            <div class="grid-cell u-medium-1-3">
 		                <div class="grid-pad-1x">
 		                    <ul class=" ">
 		                        <li><a href="http://www.bethel.edu/about/employment">Jobs at Bethel</a></li>
@@ -340,19 +432,17 @@
 		            </div>
 		        </div>
 		
-		<div class="social-media">
-		    <p class="social-media__title">Join our community</p>
-		    <a href="https://www.facebook.com/BethelBSG">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#facebook" xmlns:xlink="#"></use></svg>
-		    Facebook</a>
-		    <a href="https://twitter.com/BSG3900">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#twitter" xmlns:xlink="#"></use></svg>
-		    Twitter</a>
-		    <a href="https://www.linkedin.com/company/bethel-student-government">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#linkedin" xmlns:xlink="#"></use></svg>
-		    LinkedIn</a>
-		</div>
+		        <div class="mt3"> 
+		            <div class="social-media">
+		                <p class="social-media__title">Join our community</p>
+		                <a href="https://www.facebook.com/BethelBSG">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#facebook" xmlns:xlink="#"></use></svg>
+		                Facebook</a>
+		                <a href="https://twitter.com/BSG3900">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#twitter" xmlns:xlink="#"></use></svg>
+		                Twitter</a>
+		                <a href="https://www.linkedin.com/company/bethel-student-government">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#linkedin" xmlns:xlink="#"></use></svg>
+		                LinkedIn</a>
+		            </div>        </div>
 		    </div>
-		
-		
-		
 		
 		    <p class="center pa1"><small>© 2004-2015 Bethel University | <a href="http://knowledgebase.its.bethel.edu/articles/41/">DMCA Notification</a></small></p>
 		</footer>
