--- a/builds/off.html
+++ b/builds/off.html
@@ -87,6 +87,29 @@
 		
 
 
+		<div class="slick-carousel  carousel--overlay">
+		    <div class="slick-item">
+				<div class="moving-picture">
+					<div class="moving-picture__media">
+						<video autoplay="true" id="home-video" loop="true" muted="true">
+							<source src="https://www.bethel.edu/_testing/jmo/banner-collection/Homepage_-_Feature.webm" type="video/webm">
+							Your browser does not support the video tag.
+						</video>
+					</div>
+					<div class="va-container">
+						<div class="va-bottom">
+							<div class="moving-picture__overlay">
+						        <h2 class="moving-picture__overlay__headline">Heading</h2>
+						        <p class="moving-picture__overlay__teaser">Teaser</p>
+						        <p><a class="moving-picture__overlay__button btn" href="../../../undergrad/index.php"> Button Text </a></p>
+						    </div>
+					    </div>
+				    </div>
+				</div>
+			</div>
+		
+		
+		</div>
 
 		<p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
 
@@ -142,34 +165,30 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque sequi, in odit q
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure eligendi nobis, distinctio veniam vel rem, sequi officiis unde officia nam dolores dolor eum autem, praesentium aspernatur obcaecati nulla culpa nihil. Adipisci enim dolorum suscipit eius modi repudiandae. Quis a labore repellat, earum soluta tempore porro et aspernatur quia doloremque cumque hic dolores deleniti ratione aliquid praesentium perferendis alias. Nulla voluptas perferendis adipisci velit vel, dolores labore alias, exercitationem, id odit ut quidem expedita? Maiores ea praesentium cumque consectetur illo nulla. Mollitia magnam, accusamus in excepturi quaerat error animi, ab odit dolor reprehenderit maxime odio quia architecto obcaecati omnis! Corporis recusandae eaque quia ratione? Officia vitae dolore porro alias sit, blanditiis quasi corrupti iure hic. At dolorum, provident earum tempora vitae totam necessitatibus dolore, natus quae nesciunt recusandae. Error nulla sequi rem ducimus, explicabo voluptatibus nisi quibusdam autem dicta nobis vero sint aspernatur laudantium, beatae rerum, cumque vitae. Rerum fugit modi tempore assumenda consequuntur, temporibus cupiditate deserunt beatae architecto, ad aspernatur atque a autem voluptate sapiente officia excepturi? Ab doloribus, numquam vero iusto sit a explicabo expedita, distinctio laudantium, optio placeat, autem maiores nostrum neque. Recusandae doloremque, totam natus molestias vel aperiam eum labore, magni beatae hic alias, id molestiae numquam.
 </div>
 
-		    </div><!--/#inner-wrap-->
+		    </div>
 		</div>
 
 		<footer class="global__footer">
 		    <div class="inner">
 		
-		        <div class="grid">
-		        <div class="grid-cell u-medium-2-4">
-		            <div class="grid-pad-1x">
-		                <div class="grid">
-		                    <div class="grid-cell  u-small-1-3  u-medium-1-3  pr1">
-		                        <img src="//cdn4.bethel.edu/images/seal2.png"/>
-		                    </div>
-		                    <div class="grid-cell  u-small-2-3  u-medium-2-3">
-		                        <h1 class="h5">Bethel University</h1>
-		                        <address>3900 Bethel Drive
-		                            <br/>St. Paul, MN 55112</address>
-		                        <p>651.638.6400</p>
-		                    </div>
-		                </div>
+		        <div class="center"><button class="btn btn-small"><span class="arrow-up"></span>Back to Top<span class="arrow-up"></span></button></div>
 		
-		                        <p><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#location"></use></svg><a href="http://www.bethel.edu/about/maps-directions/">Maps &amp; Directions</a></p>
-		                        <p><a class="btn btn-blue-dark" href="http://www.bethel.edu/giving/">Support Bethel</a></p>
-		                    
+		        <div class="grid mt2">
+		        <div class="grid-cell u-medium-1-3">
+		            <div class="grid-pad-1x">
+		                <img src="//cdn4.bethel.edu/images/seal2.png"/>
+		                <h1 class="h5">Bethel University</h1>
+		                <address>3900 Bethel Drive
+		                    <br/>St. Paul, MN 55112</address>
+		                <p>651.638.6400</p>
+		
+		                <p><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#location"></use></svg><a href="http://www.bethel.edu/about/maps-directions/">Maps &amp; Directions</a></p>
+		                <p><a class="btn btn-blue-dark" href="http://www.bethel.edu/giving/">Support Bethel</a></p>
+		            
 		                </div>
 		            </div>
 		
-		            <div class="grid-cell u-medium-1-4">
+		            <div class="grid-cell u-medium-1-3">
 		                <div class="grid-pad-1x">
 		                    <h2 class="h5">Information For</h2>
 		                    <ul class="">
@@ -182,7 +201,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure eligendi nobis, d
 		                    </ul> 
 		               </div>
 		            </div>
-		            <div class="grid-cell u-medium-1-4">
+		            <div class="grid-cell u-medium-1-3">
 		                <div class="grid-pad-1x">
 		                    <ul class=" ">
 		                        <li><a href="http://www.bethel.edu/about/employment">Jobs at Bethel</a></li>
@@ -194,19 +213,17 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure eligendi nobis, d
 		            </div>
 		        </div>
 		
-		<div class="social-media">
-		    <p class="social-media__title">Join our community</p>
-		    <a href="https://www.facebook.com/BethelBSG">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#facebook" xmlns:xlink="#"></use></svg>
-		    Facebook</a>
-		    <a href="https://twitter.com/BSG3900">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#twitter" xmlns:xlink="#"></use></svg>
-		    Twitter</a>
-		    <a href="https://www.linkedin.com/company/bethel-student-government">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#linkedin" xmlns:xlink="#"></use></svg>
-		    LinkedIn</a>
-		</div>
+		        <div class="mt3"> 
+		            <div class="social-media">
+		                <p class="social-media__title">Join our community</p>
+		                <a href="https://www.facebook.com/BethelBSG">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#facebook" xmlns:xlink="#"></use></svg>
+		                Facebook</a>
+		                <a href="https://twitter.com/BSG3900">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#twitter" xmlns:xlink="#"></use></svg>
+		                Twitter</a>
+		                <a href="https://www.linkedin.com/company/bethel-student-government">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#linkedin" xmlns:xlink="#"></use></svg>
+		                LinkedIn</a>
+		            </div>        </div>
 		    </div>
-		
-		
-		
 		
 		    <p class="center pa1"><small>© 2004-2015 Bethel University | <a href="http://knowledgebase.its.bethel.edu/articles/41/">DMCA Notification</a></small></p>
 		</footer>
