--- a/builds/index.html
+++ b/builds/index.html
@@ -19,7 +19,7 @@
     <link href="//cloud.typography.com/6664852/692222/css/fonts.css" rel="stylesheet"/>
 </head>
 
-<body class="no-js">
+<body class="no-js" id="top">
 
 	<div class="global__toolbox" id="toolbox">
 	    <div class="inner">
@@ -88,26 +88,43 @@
 
 
 		<div class="slick-carousel  carousel--overlay">
-		    <div class="slick-item">
-				<div class="moving-picture">
-					<div class="moving-picture__media">
-						<video autoplay="true" id="home-video" loop="true" muted="true">
-							<source src="https://www.bethel.edu/_testing/jmo/banner-collection/Homepage_-_Feature.webm" type="video/webm">
-							Your browser does not support the video tag.
-						</video>
-					</div>
-					<div class="va-container">
-						<div class="va-bottom">
-							<div class="moving-picture__overlay">
-						        <h2 class="moving-picture__overlay__headline">Heading</h2>
-						        <p class="moving-picture__overlay__teaser">Teaser</p>
-						        <p><a class="moving-picture__overlay__button btn" href="../../../undergrad/index.php"> Button Text </a></p>
-						    </div>
-					    </div>
-				    </div>
-				</div>
-			</div>
 		
+		<div class="slick-item">
+		    <div class="moving-picture">
+		        <div class="moving-picture__media">
+		            <picture>
+		                <source media="(min-width: 830px)" srcset="//cdn2.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/feature/affordability-student-16x9.jpg"> 
+		                <img src="https://www.bethel.edu/_homepages/www/images/feature/affordability-student-2x1.jpg"> 
+		            </picture>
+		        </div>
+		
+		                <div class="moving-picture__overlay">
+		                    <h2 class="moving-picture__overlay__headline">Making your Bethel education more affordable.</h2>
+		                    <p class="moving-picture__overlay__teaser">We're committed to not letting cost stand in the way of your life-changing education, so we doubled the amount of Bethel funded scholarships and grants over the last few years to $32 million and reset tuition and aid at the seminary. Talk to your enrollment counselor to find out how financial aid can work for you.</p> 
+		                    <p><a class="moving-picture__overlay__button" href="admissions/index.php">Learn More</a></p>
+		                </div>
+		
+		    </div>
+		</div>
+		
+		
+		<div class="slick-item">
+		    <div class="moving-picture">
+		        <div class="moving-picture__media">
+		            <picture>
+		                <source media="(min-width: 830px)" srcset="//cdn2.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/feature/affordability-student-16x9.jpg"> 
+		                <img src="https://www.bethel.edu/_homepages/www/images/feature/affordability-student-2x1.jpg"> 
+		            </picture>
+		        </div>
+		
+		                <div class="moving-picture__overlay">
+		                    <h2 class="moving-picture__overlay__headline">Really Making your Bethel education more affordable.</h2>
+		                    <p class="moving-picture__overlay__teaser">We're committed to not letting cost stand in the way of your life-changing education, so we doubled the amount of Bethel funded scholarships and grants over the last few years to $32 million and reset tuition and aid at the seminary. Talk to your enrollment counselor to find out how financial aid can work for you.</p> 
+		                    <p><a class="moving-picture__overlay__button" href="admissions/index.php">Yes Learn More</a></p>
+		                </div>
+		
+		    </div>
+		</div>
 		
 		</div>
 
@@ -152,80 +169,7 @@
 
 <div class="main js-animate">
 
-    <h2 class="uppercase-underlined">Highlights</h2>
-    <div class="grid proof-points">
-        <div class="grid-cell animate animate--fadeIn">
-            <div class="grid-pad-1x">
-                <div class="proof-point center">
-                    <p class="proof-point__text"><span class="proof-point__number"><span class="odometer" data-final-number="94">00</span>%</span>
-                        <br/><span class="proof-point__text_below">seniors who rank their Bethel education good or excellent</span>
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="grid-cell animate animate--fadeIn">
-            <div class="grid-pad-1x">
-                <div class="proof-point center">
-                    <p class="proof-point__text"><span class="proof-point__number"><span class="odometer" data-final-number="93">00</span>%</span>
-                        <br/><span class="proof-point__text_below">of recent grads are either employed or in graduate school</span>
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="grid-cell animate animate--fadeIn">
-            <div class="grid-pad-1x">
-                <div class="proof-point center">
-                    <p class="proof-point__text"><span class="proof-point__number"><span class="odometer" data-final-number="5">0</span>th</span>
-                        <br/><span class="proof-point__text_below">lowest tuition out of the 17 schools in the Minnesota Private College Council</span> </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <table border="0" class="responsive">
-    <tbody>
-    <tr>
-    <th scope="col">
-    </th><th scope="col">Direct Unsubsidized Loans</th>
-    <th scope="col">Direct PLUS Loans</th>
-    <th scope="col">Private Loans</th>
-    </tr>
-    <tr>
-    <th scope="rowgroup">Fees</th>
-    <td>
-    <p>1.051% (after 7/1/2013)</p>
-    </td>
-    <td>
-    <p>4.204% (after 7/1/2013)</p>
-    </td>
-    <td>Varies</td>
-    </tr>
-    <tr>
-    <th scope="rowgroup">Make payments while in school?</th>
-    <td>Interest accrues. Optional in-school payment.</td>
-    <td>Yes</td>
-    <td>Yes</td>
-    </tr>
-    <tr>
-    <th scope="rowgroup">Interest rate</th>
-    <td>5.41% fixed (first disbursed 7/1/2013 - 6/30/2014)</td>
-    <td>6.41% fixed (first disbursed 7/1/2013 - 6/30/2014)</td>
-    <td>Varies</td>
-    </tr>
-    <tr>
-    <th scope="rowgroup">Repayment</th>
-    <td>10 years</td>
-    <td>10 years</td>
-    <td>Varies (10+<br>
-     years)</td>
-    </tr>
-    <tr>
-    <th scope="rowgroup">More info</th>
-    <td><a href="http://www.bethel.edu/seminary/financial-aid/types/loans/index#unsub">Unsubsidized Loans</a></td>
-    <td><a href="http://www.bethel.edu/seminary/financial-aid/types/loans/index#grad-plus">PLUS Loans</a></td>
-    <td><a href="http://www.bethel.edu/seminary/financial-aid/types/loans/index#private">Private Loans</a></td>
-    </tr>
-    </tbody>
-    </table>
+
     <div class="grid">
         <div class="grid-cell u-medium-1-2">
             <div class="medium-grid-pad-1x"><div class="news">
@@ -389,21 +333,24 @@
 
 		<footer class="global__footer">
 		    <div class="inner">
-		
-		        <div class="center"><button class="btn btn-small"><span class="arrow-up"></span>Back to Top<span class="arrow-up"></span></button></div>
+		        <div class="center"><a class="btn btn-small" href="#top"><span class="arrow-up"></span>Back to Top<span class="arrow-up"></span></a></div>
 		
 		        <div class="grid mt2">
-		        <div class="grid-cell u-medium-1-3">
-		            <div class="grid-pad-1x">
-		                <img src="//cdn4.bethel.edu/images/seal2.png"/>
-		                <h1 class="h5">Bethel University</h1>
-		                <address>3900 Bethel Drive
-		                    <br/>St. Paul, MN 55112</address>
-		                <p>651.638.6400</p>
+		            <div class="grid-cell u-medium-1-3">
+		                <div class="grid-pad-1x">
+		                    <img src="//cdn4.bethel.edu/images/seal2.png"/>
+		                    <div itemscope="" itemtype="https://schema.org/CollegeOrUniversity" class="bd">
+		                        <h1 class="h5"><span itemprop="legalName">Bethel University</span></h1>
+		                        <div itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
+		                            <address><span itemprop="streetAddress">3900 Bethel Drive</span>
+		                                <br/><span itemprop="addressLocality">St. Paul</span>, <span itemprop="addressRegion">MN</span> <span itemprop="postalCode">55112</span></address>
+		                            <p><span itemprop="telephone">651.638.6400</span></p>
+		                        </div>
+		                    </div>
 		
-		                <p><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#location"></use></svg><a href="http://www.bethel.edu/about/maps-directions/">Maps &amp; Directions</a></p>
-		                <p><a class="btn btn-blue-dark" href="http://www.bethel.edu/giving/">Support Bethel</a></p>
-		            
+		                    <p>#svgIcon("location")<a href="https://www.bethel.edu/about/maps-directions/">Maps &amp; Directions</a></p>
+		                    <p><a class="btn btn-blue-dark" href="https://www.bethel.edu/giving/">Support Bethel</a></p>
+		
 		                </div>
 		            </div>
 		
@@ -415,36 +362,36 @@
 		                        <li><a href="https://blink.bethel.edu/">Current Students</a></li>
 		                        <li><a href="/alumni/">Alumni</a></li>
 		                        <li><a href="/parents/">Parents &amp; Families</a></li>
-		                        <li><a href="https://blink.bethel.edu/">Faculty &amp; Staff</a></li>
-		                        <li><a href="/church-ministries/">Churches</a></li>
-		                    </ul> 
-		               </div>
+		                        <li><a href="//blink.bethel.edu/">Faculty &amp; Staff</a></li>
+		                        <li><a href="//www.bethel.edu/church-relations/">Churches</a></li>
+		                    </ul>
+		                </div>
 		            </div>
+		
+		
 		            <div class="grid-cell u-medium-1-3">
 		                <div class="grid-pad-1x">
 		                    <ul class=" ">
-		                        <li><a href="http://www.bethel.edu/about/employment">Jobs at Bethel</a></li>
-		                        <li><a href="http://www.bethel.edu/events/calendar/">Calendar</a></li>
-		                        <li><a href="http://www.bethel.edu/library/">Library</a></li>
-		                        <li><a href="https://www.bethel.edu/about/contact/questions-comments">Questions &amp; Comments</a></li>
+		                        <li><a href="//www.bethel.edu/about/employment/">Jobs at Bethel</a></li>
+		                        <li><a href="//www.bethel.edu/events/calendar/">Calendar</a></li>
+		                        <li><a href="//www.bethel.edu/library/">Library</a></li>
+		                        <li><a href="//www.bethel.edu/about/contact/questions-comments/">Questions &amp; Comments</a></li>
 		                    </ul>
 		                </div>
 		            </div>
 		        </div>
 		
-		        <div class="mt3"> 
+		        <div class="mt3">
 		            <div class="social-media">
 		                <p class="social-media__title">Join our community</p>
-		                <a href="https://www.facebook.com/BethelBSG">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#facebook" xmlns:xlink="#"></use></svg>
-		                Facebook</a>
-		                <a href="https://twitter.com/BSG3900">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#twitter" xmlns:xlink="#"></use></svg>
-		                Twitter</a>
-		                <a href="https://www.linkedin.com/company/bethel-student-government">    <svg class="svg-icon  "><use xlink:href="/_cascade/files/symbols.svg#linkedin" xmlns:xlink="#"></use></svg>
-		                LinkedIn</a>
-		            </div>        </div>
+		                <a href="https://www.facebook.com/betheluniversity">#svgIcon("facebook")Facebook</a>
+		                <a href="https://twitter.com/BethelU">#svgIcon("twitter")Twitter</a>
+		                <a href="https://www.instagram.com/bethelumn">#svgIcon("instagram")Instagram</a>
+		                <a href="https://www.linkedin.com/company/bethel-university">#svgIcon("linkedin")LinkedIn</a>
+		            </div>
+		        </div>
 		    </div>
-		
-		    <p class="center pa1"><small>© 2004-2015 Bethel University | <a href="http://knowledgebase.its.bethel.edu/articles/41/">DMCA Notification</a></small></p>
+		    <p class="center pa1"><small>© 2004-2015 Bethel University | <a href="https://knowledgebase.its.bethel.edu/articles/41/">DMCA Notification</a></small></p>
 		</footer>
 	</div>
 
