--- a/builds/layout.html
+++ b/builds/layout.html
@@ -14,6 +14,7 @@
         <meta content="#da532c" name="msapplication-TileColor"/>
         <meta content="//cdn4.bethel.edu/images/mstile-150x150.png" name="msapplication-TileImage"/>
         <link href="//cdn4.bethel.edu/images/favicon.ico" rel="icon" type="image/x-icon"/>
+	<script src="http://cdn.jsdelivr.net/g/lazysizes(lazysizes.min.js+plugins/rias/ls.rias.min.js)" async=""></script>
     <link rel="stylesheet" href="/css/fizz.css"/>
     <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6664852/762926/css/fonts.css" />
 </head>
@@ -86,16 +87,34 @@
 		
 
 
-
-		<div class="slick-carousel  carousel--overlay">
+		<div    class="flickity  js-flickity"
+		        data-flickity-options='{ 
+		            "wrapAround": true,
+		            "imagesLoaded": true,
+		            "initialIndex": 0,
+		            "pageDots":false
+		            }'>
 		
-		    <div class="slick-item">
+		    <div class="flickity--cell">
 		        <div class="moving-picture">
 		            <div class="moving-picture__media">
-		                <picture>
-		                    <source media="(min-width: 830px)" srcset="//cdn2.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/feature/affordability-student-16x9.jpg"> 
-		                    <img src="https://www.bethel.edu/_homepages/www/images/feature/affordability-student-2x1.jpg"> 
-		                </picture>
+		
+		                    <picture>
+		                        <!--[if IE 9]><video style="display: none"><![endif]-->
+		                        <source
+		                            data-srcset="//cdn2.bethel.edu/resize/unsafe/900x0/smart/https://www.bethel.edu/_homepages/www/images/feature/affordability-student-16x9.jpg"
+		                            media="(min-width: 830px)" 
+		                        />
+		                        <source
+		                            data-srcset="//cdn2.bethel.edu/resize/unsafe/830x0/smart/https://www.bethel.edu/_homepages/www/images/feature/affordability-student-2x1.jpg"
+		                        />
+		                        <!--[if IE 9]></video><![endif]-->
+		                        <img
+		                                class="lazyload"
+		                                alt="image with artdirection"
+		                                data-sizes="auto"
+		                        />
+		                    </picture>
 		            </div>
 		
 		            <div class="moving-picture__overlay">
@@ -106,13 +125,25 @@
 		        </div>
 		    </div>
 		
-		
-		    <div class="slick-item">
+		    <div class="flickity--cell">
 		        <div class="moving-picture">
 		            <div class="moving-picture__media">
+		
 		                <picture>
-		                    <source media="(min-width: 830px)" srcset="//cdn2.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/feature/affordability-student-16x9.jpg"> 
-		                    <img src="https://www.bethel.edu/_homepages/www/images/feature/affordability-student-2x1.jpg"> 
+		                    <!--[if IE 9]><video style="display: none"><![endif]-->
+		                    <source
+		                        data-srcset="//cdn2.bethel.edu/resize/unsafe/900x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg"
+		                        media="(min-width: 830px)" 
+		                    />
+		                    <source
+		                        data-srcset="//cdn2.bethel.edu/resize/unsafe/830x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-2x1.jpg"
+		                    />
+		                    <!--[if IE 9]></video><![endif]-->
+		                    <img
+		                            class="lazyload"
+		                            alt="image with artdirection"
+		                            data-sizes="auto"
+		                    />
 		                </picture>
 		            </div>
 		
@@ -120,6 +151,71 @@
 		                <h2 class="moving-picture__overlay__headline">Really Making your Bethel education more affordable.</h2>
 		                <p class="moving-picture__overlay__teaser">We're committed to not letting cost stand in the way of your life-changing education, so we doubled the amount of Bethel funded scholarships and grants over the last few years to $32 million and reset tuition and aid at the seminary. Talk to your enrollment counselor to find out how financial aid can work for you.</p> 
 		                <p><a class="moving-picture__overlay__button" href="admissions/index.php">Yes Learn More</a></p>
+		            </div>
+		
+		        </div>
+		    </div>
+		
+		    <div class="flickity--cell">
+		        <div class="moving-picture">
+		            <div class="moving-picture__media">
+		                <picture>
+		                    <!--[if IE 9]><video style="display: none"><![endif]-->
+		                    <source
+		                        data-srcset="//cdn2.bethel.edu/resize/unsafe/900x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg"
+		                        media="(min-width: 830px)" 
+		                    />
+		                    <source
+		                        data-srcset="//cdn2.bethel.edu/resize/unsafe/830x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-2x1.jpg"
+		                    />
+		                    <!--[if IE 9]></video><![endif]-->
+		                    <img
+		                            class="lazyload"
+		                            alt="image with artdirection"
+		                            data-sizes="auto"
+		                    />
+		                </picture>
+		            </div>
+		
+		
+		            <div class="moving-picture__overlay">
+		                <h2 class="moving-picture__overlay__headline">We live our beliefs inside and outside the classroom.</h2>
+		                <p class="moving-picture__overlay__teaser">Join a community of people who love to ask important questions, talk about their faith, and learn from each other’s perspectives. </p>
+		                <p><a class="moving-picture__overlay__button" href="seminary/index.php">Learn More about Bethel Seminary</a></p>
+		
+		            </div>
+		
+		        </div>
+		    </div>
+		
+		    <div class="flickity--cell">
+		        <div class="moving-picture">
+		            <div class="moving-picture__media">
+		                <picture>
+		                    <!--[if IE 9]><video style="display: none"><![endif]-->
+		                    <source
+		                        data-srcset="//cdn2.bethel.edu/resize/unsafe/900x0/smart/https://www.bethel.edu/_homepages/www/images/feature/practice-passion-16x9.jpg"
+		                        media="(min-width: 830px)" 
+		                    />
+		                    <source
+		                        data-srcset="//cdn2.bethel.edu/resize/unsafe/830x0/smart/https://www.bethel.edu/_homepages/www/images/feature/practice-passion-2x1.jpg"
+		                    />
+		                    <!--[if IE 9]></video><![endif]-->
+		                    <img
+		                            class="lazyload"
+		                            alt="image with artdirection"
+		                            data-sizes="auto"
+		                    />
+		                </picture>
+		            </div>
+		
+		
+		            <div class="moving-picture__overlay">
+		                <h2 class="moving-picture__overlay__headline">Practice because you love to.</h2>
+		                <p class="moving-picture__overlay__teaser">At Bethel, we make the extra effort to be great. Because when you love what you do, it’s not work.</p>
+		
+		                <p><a class="moving-picture__overlay__button" href="admissions/apply/index.php">Follow your passion</a></p>
+		
 		            </div>
 		        </div>
 		    </div>
@@ -302,37 +398,9 @@
 		    <p class="center pa1"><small>© 2004-2015 Bethel University | <a href="https://knowledgebase.its.bethel.edu/articles/41/">DMCA Notification</a></small></p>
 		</footer>
 	</div>
-	<script type="text/javascript">
-		"use strict";
-		var toggleGlobalNav = function(e) {
-		    e.preventDefault();
-		    document.querySelector('body').classList.toggle('js-openGlobalNav');
-		};
 
-		var toggleSiteNav = function(e) {
-		    e.preventDefault();
-		    document.querySelector('body').classList.toggle('js-openSiteNav');
-		};
-
-		var globalNavBtn = document.querySelector('#js-globalNav-button');
-		var globalNavBtnClose = document.querySelector('#js-globalNav-button--close');
-		var siteTitleBtn = document.querySelector('#js-site__title__button');
-
-		if(globalNavBtn){globalNavBtn.addEventListener('click',toggleGlobalNav);}
-		if(globalNavBtnClose){globalNavBtnClose.addEventListener('click',toggleGlobalNav);}
-		if(siteTitleBtn){siteTitleBtn.addEventListener('click',toggleSiteNav);}
-
-		function loadCSS( href, before, media, callback ){"use strict"; var ss = window.document.createElement( "link" ); var ref = before || window.document.getElementsByTagName( "script" )[ 0 ]; var sheets = window.document.styleSheets; ss.rel = "stylesheet"; ss.href = href; ss.media = "only x"; if( callback ) {ss.onload = callback; } ref.parentNode.insertBefore( ss, ref ); ss.onloadcssdefined = function( cb ){var defined; for( var i = 0; i < sheets.length; i++ ){if( sheets[ i ].href && sheets[ i ].href.indexOf( href ) > -1 ){defined = true; } } if( defined ){cb(); } else {setTimeout(function() {ss.onloadcssdefined( cb ); }); } }; ss.onloadcssdefined(function() {ss.media = media || "all"; }); return ss; } 
-		function onloadCSS( ss, callback ) {ss.onload = function() {ss.onload = null; if( callback ) {callback.call( ss ); } }; if( "isApplicationInstalled" in navigator && "onloadcssdefined" in ss ) {ss.onloadcssdefined( callback ); } }
-	    	var fizz = loadCSS( "/css/pop.css" );
-	    	onloadCSS( fizz, function() {console.log( "pop has asynchronously loaded." ); });
-	    	var cloud = loadCSS( "//cloud.typography.com/6664852/762926/css/fonts.css" );
-	    	onloadCSS( cloud, function() {console.log( "cloud has asynchronously loaded." ); });
-	    function loadJS( src, cb ){"use strict"; var ref = window.document.getElementsByTagName( "script" )[ 0 ]; var script = window.document.createElement( "script" ); script.src = src; script.async = true; ref.parentNode.insertBefore( script, ref ); if (cb && typeof(cb) === "function") {script.onload = cb; } return script; } 
-			loadJS("/js/bundle.js");
-	</script>
-	<noscript><link href="/css/pop.css" rel="stylesheet" /></noscript>
-	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="/js/bundle.js"></script>
+	
 </body>
 </html>
