--- a/builds/index.html
+++ b/builds/index.html
@@ -84,10 +84,134 @@
 		        </div>
 		    </div>
 		
-
-
-
-
+		<div    class="flickity  js-rotate-order-carousel">
+		
+		    <div class="flickity--cell">
+		        <div class="moving-picture">
+		            <div class="moving-picture__media">
+		
+		                    <picture>
+		                        <!--[if IE 9]><video style="display: none"><![endif]-->
+		                        <source
+		                            data-srcset="//cdn2.bethel.edu/resize/unsafe/900x0/smart/https://www.bethel.edu/_homepages/www/images/feature/affordability-student-16x9.jpg"
+		                            media="(min-width: 830px)" 
+		                        />
+		                        <source
+		                            data-srcset="//cdn2.bethel.edu/resize/unsafe/830x0/smart/https://www.bethel.edu/_homepages/www/images/feature/affordability-student-2x1.jpg"
+		                        />
+		                        <!--[if IE 9]></video><![endif]-->
+		                        <img
+		                                class="lazyload"
+		                                alt="image with artdirection"
+		                                data-sizes="auto"
+		                        />
+		                    </picture>
+		            </div>
+		
+		            <div class="moving-picture__overlay">
+		                <h2 class="moving-picture__overlay__headline">Making your Bethel education more affordable.</h2>
+		                <p class="moving-picture__overlay__teaser">We're committed to not letting cost stand in the way of your life-changing education, so we doubled the amount of Bethel funded scholarships and grants over the last few years to $32 million and reset tuition and aid at the seminary. Talk to your enrollment counselor to find out how financial aid can work for you.</p> 
+		                <p><a class="moving-picture__overlay__button" href="admissions/index.php">Learn More</a></p>
+		            </div>
+		        </div>
+		    </div>
+		
+		    <div class="flickity--cell">
+		        <div class="moving-picture">
+		            <div class="moving-picture__media">
+		
+		                <picture>
+		                    <!--[if IE 9]><video style="display: none"><![endif]-->
+		                    <source
+		                        data-srcset="//cdn2.bethel.edu/resize/unsafe/900x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-16x9.jpg"
+		                        media="(min-width: 830px)" 
+		                    />
+		                    <source
+		                        data-srcset="//cdn2.bethel.edu/resize/unsafe/830x0/smart/https://www.bethel.edu/_homepages/www/images/feature/best-professors-2x1.jpg"
+		                    />
+		                    <!--[if IE 9]></video><![endif]-->
+		                    <img
+		                            class="lazyload"
+		                            alt="image with artdirection"
+		                            data-sizes="auto"
+		                    />
+		                </picture>
+		            </div>
+		
+		            <div class="moving-picture__overlay">
+		                <h2 class="moving-picture__overlay__headline">Really Making your Bethel education more affordable.</h2>
+		                <p class="moving-picture__overlay__teaser">We're committed to not letting cost stand in the way of your life-changing education, so we doubled the amount of Bethel funded scholarships and grants over the last few years to $32 million and reset tuition and aid at the seminary. Talk to your enrollment counselor to find out how financial aid can work for you.</p> 
+		                <p><a class="moving-picture__overlay__button" href="admissions/index.php">Yes Learn More</a></p>
+		            </div>
+		
+		        </div>
+		    </div>
+		
+		    <div class="flickity--cell">
+		        <div class="moving-picture">
+		            <div class="moving-picture__media">
+		                <picture>
+		                    <!--[if IE 9]><video style="display: none"><![endif]-->
+		                    <source
+		                        data-srcset="//cdn2.bethel.edu/resize/unsafe/900x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-16x9.jpg"
+		                        media="(min-width: 830px)" 
+		                    />
+		                    <source
+		                        data-srcset="//cdn2.bethel.edu/resize/unsafe/830x0/smart/https://www.bethel.edu/_homepages/www/images/feature/seminary-theology-2x1.jpg"
+		                    />
+		                    <!--[if IE 9]></video><![endif]-->
+		                    <img
+		                            class="lazyload"
+		                            alt="image with artdirection"
+		                            data-sizes="auto"
+		                    />
+		                </picture>
+		            </div>
+		
+		
+		            <div class="moving-picture__overlay">
+		                <h2 class="moving-picture__overlay__headline">We live our beliefs inside and outside the classroom.</h2>
+		                <p class="moving-picture__overlay__teaser">Join a community of people who love to ask important questions, talk about their faith, and learn from each other’s perspectives. </p>
+		                <p><a class="moving-picture__overlay__button" href="seminary/index.php">Learn More about Bethel Seminary</a></p>
+		
+		            </div>
+		
+		        </div>
+		    </div>
+		
+		    <div class="flickity--cell">
+		        <div class="moving-picture">
+		            <div class="moving-picture__media">
+		                <picture>
+		                    <!--[if IE 9]><video style="display: none"><![endif]-->
+		                    <source
+		                        data-srcset="//cdn2.bethel.edu/resize/unsafe/900x0/smart/https://www.bethel.edu/_homepages/www/images/feature/practice-passion-16x9.jpg"
+		                        media="(min-width: 830px)" 
+		                    />
+		                    <source
+		                        data-srcset="//cdn2.bethel.edu/resize/unsafe/830x0/smart/https://www.bethel.edu/_homepages/www/images/feature/practice-passion-2x1.jpg"
+		                    />
+		                    <!--[if IE 9]></video><![endif]-->
+		                    <img
+		                            class="lazyload"
+		                            alt="image with artdirection"
+		                            data-sizes="auto"
+		                    />
+		                </picture>
+		            </div>
+		
+		
+		            <div class="moving-picture__overlay">
+		                <h2 class="moving-picture__overlay__headline">Practice because you love to.</h2>
+		                <p class="moving-picture__overlay__teaser">At Bethel, we make the extra effort to be great. Because when you love what you do, it’s not work.</p>
+		
+		                <p><a class="moving-picture__overlay__button" href="admissions/apply/index.php">Follow your passion</a></p>
+		
+		            </div>
+		        </div>
+		    </div>
+		
+		</div>
 		<p class="site__title__button" id="js-site__title__button"><a href="#siteNav">☰ In This Section</a></p>
 
 		<div class="inner--content  margins-off">
@@ -129,35 +253,6 @@
 		        	</div></div>
 				<div class="main js-animate">
 
-    <div    class="flickity  js-flickity  carousel--quote"
-            data-flickity-options='{ 
-                "wrapAround": true,
-                "imagesLoaded": true,
-                "initialIndex": 0,
-                "pageDots":false
-                }'>
-    
-        <div class="flickity--cell">
-            <div class="pa1  quote">
-                <div class="grid ">
-                    <div class="grid-cell  u-medium-3-12">
-                        <div class="grid-pad-1x">
-                            <div class="quote__avatar">
-                                <img class="lazyload" data-src="//cdn1.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_nettleton-nicole.jpg" style="opacity: 1;">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="grid-cell  u-medium-9-12">
-                        <div class="grid-pad-1x">
-                            <p class="quote__text">Bethel really prepared me...having a liberal arts education was beneficial because it made me well rounded.[Businesses] look for people with all sorts of different backgrounds and leadership experience. Bethel encourages people to get involved.</p>
-                            <cite class="quote__source">–Nicole (Nettleton) Willenbring</cite>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    
-        <div class="flickity--cell">
     <div class="pa1  quote" title="">
     <div class="grid " title="">
     <div class="grid-cell  u-medium-3-12" title=""><div class="grid-pad-1x" title=""><div class="quote__avatar" title=""><img class="lazyload" data-src="//cdn3.bethel.edu/resize/unsafe/200x0/smart/https://www.bethel.edu//_shared-content/quotes/images/cas__business_vennerstrom-andrew.jpg" style="opacity: 1;" title=""></div></div></div><div class="grid-cell  u-medium-9-12"><div class="grid-pad-1x"><p class="quote__text">As a Christian in the workplace, I am able to connect with people on a different level. I know my reason for being there and do my part to create an encouraging work environment for my coworkers. I hope my attitude is a positive example observable through the way I make decisions, treat my clients, and strive for excellence every day.</p><cite class="quote__source">–Andrew Vennerstrom </cite></div></div></div></div>
